	PR middle-end/30494 	* gimplify.c (omp_add_variable): Don't call omp_notice_variable 	on TYPE_SIZE_UNIT for GOVD_LOCAL VLAs.

* gcc.dg/gomp/pr30494.c: New test.
	* g++.dg/gomp/pr30494.C: New test.

	* testsuite/libgomp.c/pr30494.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121132 138bc75d-0d04-0410-961f-82ee72b054a4